# i3icons

./: .gitmodules  README.md
src/: CMakeLists.txt  icons.config  main.cpp
